--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -23,7 +23,7 @@
 <!ENTITY Ctr_tnot			"(pestañas no arriba)">
 
 <!ENTITY Ctr_tabcolors_t	"Texto y colores de pestaña">
-<!ENTITY Ctr_icons_t		"Favicon e iconos">
+<!ENTITY Ctr_urlbar_t		"Urlbar settings">
 
 <!ENTITY Ctr_tabs			"Pestañas">
 <!ENTITY Ctr_tabs0			"Pestañas curvadas (Australis por defecto)">
@@ -45,6 +45,8 @@
 <!ENTITY Ctr_tabwidthinfo	"Ancho-mínimo y Ancho-máximo están controlados por TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"Ancho-mínimo y Ancho-máximo están controlados por TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Values below 48px will cause glitches in most cases!">
+<!ENTITY Ctr_emptyfavicon	"Restaurar favicon vacío (si un sitio no ofrece uno)">
+<!ENTITY Ctr_noemptypticon	"Eliminar favicon vacío en pestañas fijas">
 <!ENTITY Ctr_closetab_0		"Botón de cierre de pestaña">
 <!ENTITY Ctr_closetab_1		"Sólo en la pestaña activa">
 <!ENTITY Ctr_closetab_2		"En ninguna parte">
@@ -80,6 +82,7 @@
 <!ENTITY Ctr_appbutmhi		"Posición más alta (si está en la barra de pestañas)">
 <!ENTITY Ctr_appbutbdl		"Ocultar bordes y colores de fondo">
 <!ENTITY Ctr_dblclclosefx	"El doble clic cierra la ventana actual">
+<!ENTITY Ctr_appbclmmenus	"Clickable menus inside button menu (New Tab, Print...)">
 
 <!ENTITY Ctr_ui				"Interfaz de usuario general">
 <!ENTITY Ctr_nbiconsize0	"Establecer atributo de la barra de navegación">
@@ -87,16 +90,17 @@
 <!ENTITY Ctr_bfurlbarfix 	"Fijar el radio del borde de las barras de URL">
 <!ENTITY Ctr_backforward	"Botón atrás-adelante movible">
 <!ENTITY Ctr_hide_bf_popup	"Ocultar el menú historial de los botones al pulsarlos con el ratón">
+<!ENTITY Ctr_bf_space		"Reduce space between buttons (if possible)">
 <!ENTITY Ctr_noconicons		"Reemplazar iconos de menú contextual de la página con etiquetas (atrás, adelante, parar, recargar, página de marcadores)">
 <!ENTITY Ctr_wincontrols	"Controles de ventana de pantalla completa movibles (min/max/close)">
-<!ENTITY Ctr_starinurl		"Botón estrella de marcador en la barra de URL (¡requiere reiniciar Firefox!)">
-<!ENTITY Ctr_feedinurl		"Botón-de-suscripción (feeds) en la barra de URL (¡requiere reiniciar Firefox!)">
+<!ENTITY Ctr_emptyfavicon2	"Reemplazar favicon genérico (vació y punteado) con un favicon en blanco">
 <!ENTITY Ctr_mstatusbar		"Panel de barra de estado movible">
-<!ENTITY Ctr_hideurelstop	"Ocultar botones parar y recargar en las barras de URL">
+<!ENTITY Ctr_mstatusbars4e	"Status-bar panel is controlled by 'Status-4-Evar'">
+<!ENTITY Ctr_mstatusbartpp	"Status-bar panel is controlled by 'ThePuzzlePiece'">
 <!ENTITY Ctr_combrelstop	"Combinar botones parar-recargar">
+<!ENTITY Ctr_stoprel1		"Importante: ¡sitúe el botón recargar después del botón parar!">
 <!ENTITY Ctr_panelmenucol	"Menús de panel: color de fondo alternativo">
 <!ENTITY Ctr_hideprivmask	"Navegación privada: ocultar indicador de máscara">
-<!ENTITY Ctr_verifiedcolors	"Cuadro de identidad verde/azul para sitios web verificados">
 <!ENTITY Ctr_findbar		"Barra de búsqueda">
 <!ENTITY Ctr_findbar_def	"Posición por defecto">
 <!ENTITY Ctr_findbar_top	"Arriba">
@@ -107,8 +111,7 @@
 <!ENTITY Ctr_nav_txt_ico1	"Mostrar iconos grandes">
 <!ENTITY Ctr_nav_txt_ico2	"Mostrar iconos y texto">
 <!ENTITY Ctr_nav_txt_ico3	"Mostrar sólo texto">
-<!ENTITY Ctr_stoprel0		"Configuraciones del botón parar-recargar">
-<!ENTITY Ctr_stoprel1		"Importante: ¡sitúe el botón recargar después del botón parar!">
+<!ENTITY Ctr_nav_txt_exp	"Experimental attributes:">
 <!ENTITY Ctr_cpanelmenus	"Menús de panel: vista compacta (marcadores, historial, etc.)">
 <!ENTITY Ctr_hidezoomres	"Controles de zoom en la barra de herramientas: ocultar botón de restablecimiento del zoom">
 <!ENTITY Ctr_pmhidelabels	"Menú de panel emergente: ocultar etiquetas de los botones">
@@ -118,6 +121,9 @@
 <!ENTITY Ctr_tabmokcolor	"Color blanco para botones de pestaña (cerrar, nueva, grupos, listar todas)">
 <!ENTITY Ctr_tabmokcolor2	"Color blanco y sombreado oscuro para el texto en pestañas no activas">
 <!ENTITY Ctr_tabmokcolor3	"Color blanco para separadores de pestañas">
+
+<!ENTITY Ctr_navthrobber1	"Clicking activity indicator opens specified url:">
+<!ENTITY Ctr_navthrobber2	"Add url or leave empty">
 
 <!ENTITY Ctr_tab_tf_info1	"Están soportados como entrada nombres de colores, códigos hexadecimales, y valores rgb(a) y hsl(a).">
 <!ENTITY Ctr_tab_tf_info2	"¡Las entradas no serán validadas!">
@@ -140,17 +146,22 @@
 <!ENTITY Ctr_bold			"Negrita">
 <!ENTITY Ctr_italic			"Itálica">
 
-<!ENTITY Ctr_favicon		"Configuraciones de Favicon">
-<!ENTITY Ctr_emptyfavicon	"Restaurar favicon vacío (si un sitio no ofrece uno)">
-<!ENTITY Ctr_emptyfavicon2	"Reemplazar favicon genérico (vació y punteado) con un favicon en blanco">
-<!ENTITY Ctr_noemptypticon	"Eliminar favicon vacío en pestañas fijas">
-<!ENTITY Ctr_faviconurl0	"Icons in urlbar">
+<!ENTITY Ctr_urlbar			"Urlbar">
+<!ENTITY Ctr_starinurl		"Botón estrella de marcador en la barra de URL (¡requiere reiniciar Firefox!)">
+<!ENTITY Ctr_feedinurl		"Botón-de-suscripción (feeds) en la barra de URL (¡requiere reiniciar Firefox!)">
+<!ENTITY Ctr_hideurelstop	"Ocultar botones parar y recargar en las barras de URL">
+<!ENTITY Ctr_hideprbutton	"Hide notification icon when a popup gets blocked">
+<!ENTITY Ctr_urlbar_ib		"Urlbars identity box">
+<!ENTITY Ctr_verifiedcolors	"Cuadro de identidad verde/azul para sitios web verificados">
 <!ENTITY Ctr_faviconurl		"Favicon en la barra de URL (¡requiere reiniciar Firefox!">
 <!ENTITY Ctr_padlock_hid	"Candado (oculto)">
 <!ENTITY Ctr_padlock_def	"Candado (predeterminado)">
 <!ENTITY Ctr_padlock_cla	"Candado (clásico)">
 <!ENTITY Ctr_padlock_mod	"Candado (moderno)">
 <!ENTITY Ctr_padlock_ext	"Iconos de seguridad">
+<!ENTITY Ctr_icopageinfo	"Clicking icon opens the 'page info' window">
+
+<!ENTITY Ctr_extrabarinfo	"Switching between 'tabs on top' and 'tabs not on top' modes randomly alters additional toolbars order. Firefox has to be restarted to solve this issue.">
 
 <!ENTITY Ctr_invicons		"Iconos invertidos">
 <!ENTITY Ctr_menubar		"Barra de menús">
@@ -176,6 +187,8 @@
 <!ENTITY Ctr_nonavbarbg		"Barra de navegación: eliminar color de fondo">
 <!ENTITY Ctr_nonavborder	"Añadir borde superior a la barra de marcadores">
 <!ENTITY Ctr_nonavtbborder	"Barras de herramientas en la parte superior: eliminar bordes de barra de herramientas">
+<!ENTITY Ctr_hidesbclose	"Sidebars: hide sidebar close button">
+<!ENTITY Ctr_chevronfix		"Navigation toolbar: hide double arrow ('chevron') at toolbars end">
 
 <!ENTITY Ctr_closeabarbut	"Ocultar botón cerrar de barras de complementos">
 <!ENTITY Ctr_highaddonsbar	"Incrementar altura">
@@ -190,7 +203,11 @@
 <!ENTITY Ctr_toolsitem		"Elemento en el menú Herramientas">
 <!ENTITY Ctr_appmenuitem	"Elemento en el menú de la aplicación">
 <!ENTITY Ctr_contextitem	"Elemento en el menú contextual de las barras de herramientas">
+<!ENTITY Ctr_puictrbutton	"Button in main panel menu">
+
+<!ENTITY Ctr_otherctroptns	"Other settings">
 <!ENTITY Ctr_cuibotbuttons	"Botones extra en el modo 'Personalizar'">
+<!ENTITY Ctr_bookmarkoinpw	"'Open in a new private window' entry in bookmarks context menu">
 
 
 <!ENTITY Ctr_pw_settings	"Configuraciones">
@@ -207,3 +224,6 @@
 
 <!ENTITY Ctr_addon-bar.accesskey	"C">
 <!ENTITY Ctr_extrabar.accesskey		"A">
+<!ENTITY Ctr_openInPrivateWindow	"Open in a New Private Window">
+<!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
+<!ENTITY appMenuGettingStarted.label	"Getting started">
