--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -23,7 +23,7 @@
 <!ENTITY Ctr_tnot			"(karty nie na górze)">
 
 <!ENTITY Ctr_tabcolors_t	"Kolory karty i tekstu">
-<!ENTITY Ctr_icons_t		"Ikona ulubionych i ikony">
+<!ENTITY Ctr_urlbar_t		"Ustawienia paska adresu">
 
 <!ENTITY Ctr_tabs			"Karty">
 <!ENTITY Ctr_tabs0			"Karty zaokrąglone (domyślne w Australis)">
@@ -34,8 +34,8 @@
 <!ENTITY Ctr_tabforminfo	"Wygląd karty jest kontrolowany przez obecny styl.">
 <!ENTITY Ctr_tabsontop0		"Karty na górze (domyślne) - [tabsontop]">
 <!ENTITY Ctr_tabsontop1		"Karty na górze - ustawienie [tabsontop=true]">
-<!ENTITY Ctr_tabsontop2		"Karty na górze - ustawienie [tabsontop=false]">
-<!ENTITY Ctr_tabsontop3		"Karty na górze (v2) - ustawienie [tabsontop=false]">
+<!ENTITY Ctr_tabsontop2		"Karty nie na górze - ustawienie [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Karty nie na górze (v2) - ustawienie [tabsontop=false]">
 <!ENTITY Ctr_tabsontopI1	"Dodaje atrybut [tabsontop=true/false] do:">
 <!ENTITY Ctr_tabsintitlebar	"Pasek tytułu Firefoksa (ustawienie about:config)">
 <!ENTITY Ctr_tabwidthdef	"(domyślne)">
@@ -45,6 +45,8 @@
 <!ENTITY Ctr_tabwidthinfo	"Szerokość karty jest kontrolowana przez TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"Szerokość karty jest kontrolowana przez TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Wartości poniżej 48 pikseli w większości przypadków spowodują błędy!">
+<!ENTITY Ctr_emptyfavicon	"Przywróć pustą ikonę ulubionych (jeżeli strona nie zaoferuje żadnej)">
+<!ENTITY Ctr_noemptypticon	"Usuń pustą ikonę ulubionych z przypiętej karty">
 <!ENTITY Ctr_closetab_0		"Przycisk zamknięcia karty">
 <!ENTITY Ctr_closetab_1		"Tylko na aktywnej karcie">
 <!ENTITY Ctr_closetab_2		"Nigdzie">
@@ -80,6 +82,7 @@
 <!ENTITY Ctr_appbutmhi		"Wyższa pozycja (jeżeli na pasku kart)">
 <!ENTITY Ctr_appbutbdl		"Ukryj kolory obramowań i tła">
 <!ENTITY Ctr_dblclclosefx	"Podwójne kliknięcie zamyka bieżące okno">
+<!ENTITY Ctr_appbclmmenus	"Klikalne menu wewnątrz menu przycisku (Nowa karta, Drukuj...)">
 
 <!ENTITY Ctr_ui				"Główny interfejs użytkownika">
 <!ENTITY Ctr_nbiconsize0	"Ustaw atrybut paska nawigacji">
@@ -87,16 +90,17 @@
 <!ENTITY Ctr_bfurlbarfix	"Napraw promień krawędzi paska adresu">
 <!ENTITY Ctr_backforward	"Ruchomy przycisk wstecz-do przodu">
 <!ENTITY Ctr_hide_bf_popup	"Ukryj menu historii po naciśnięciu przycisku myszki">
-<!ENTITY Ctr_noconicons		"Zastąp etykietami ikony menu kontekstowego strony (wstecz, do przodu, zatrzymaj odśwież, dodaj zakładkę)">
+<!ENTITY Ctr_bf_space		"Zmniejsz odstęp pomiędzy przyciskami (jeżeli możliwe)">
+<!ENTITY Ctr_noconicons		"Zastąp etykietami ikony menu kontekstowego strony (wstecz, do przodu, zatrzymaj, odśwież, dodaj zakładkę)">
 <!ENTITY Ctr_wincontrols	"Ruchome kontrolki okna pełnego ekranu (minimalizuj, maksymalizuj, zamknij)">
-<!ENTITY Ctr_starinurl		"Przycisk 'gwiazdka' na pasku adresu (zrestartuj Firefoksa!)">
-<!ENTITY Ctr_feedinurl		"Przycisk RSS na pasku adresu (zrestartuj Firefoksa!)">
+<!ENTITY Ctr_emptyfavicon2	"Wymień standardową ikonę ulubionych (pusta i wykropkowana) na ikonę kartki">
 <!ENTITY Ctr_mstatusbar		"Ruchomy panel paska statusu">
-<!ENTITY Ctr_hideurelstop	"Ukryj przyciski zatrzymaj i odśwież na pasku adresu">
-<!ENTITY Ctr_combrelstop	"Połącz przyciski zatrzymaj i odśwież">
+<!ENTITY Ctr_mstatusbars4e	"Panel paska statusu jest kontrolowany przez 'Status-4-Evar'">
+<!ENTITY Ctr_mstatusbartpp	"Panel paska statusu jest kontrolowany przez 'ThePuzzlePiece'">
+<!ENTITY Ctr_combrelstop	"Połącz przyciski zatrzymania i odświeżania">
+<!ENTITY Ctr_stoprel1		"Ważne: umieść przycisk odświeżania za przyciskiem zatrzymania!">
 <!ENTITY Ctr_panelmenucol	"Menu panelu: alternatywny kolor tła">
 <!ENTITY Ctr_hideprivmask	"Prywatne przeglądanie: ukryj wskaźnik-maskę">
-<!ENTITY Ctr_verifiedcolors	"Zielone i niebieskie pole tożsamości dla zweryfikowanych stron">
 <!ENTITY Ctr_findbar		"Pasek wyszukiwania">
 <!ENTITY Ctr_findbar_def	"Pozycja domyślna">
 <!ENTITY Ctr_findbar_top	"Pozycja na górze">
@@ -107,8 +111,7 @@
 <!ENTITY Ctr_nav_txt_ico1	"Pokaż duże ikony">
 <!ENTITY Ctr_nav_txt_ico2	"Pokaż ikony i tekst">
 <!ENTITY Ctr_nav_txt_ico3	"Pokaż tylko tekst">
-<!ENTITY Ctr_stoprel0		"Ustawienia przycisku odświeżania i zatrzymania">
-<!ENTITY Ctr_stoprel1		"Ważne: umieść przycisk odświeżania za przyciskiem zatrzymania!">
+<!ENTITY Ctr_nav_txt_exp	"Atrybuty eksperymentalne:">
 <!ENTITY Ctr_cpanelmenus	"Menu panelu: widok kompaktowy (zakładki, historia itp.)">
 <!ENTITY Ctr_hidezoomres	"Kontrolki powiększenia na pasku narzędzi: ukryj przycisk resetu powiększenia">
 <!ENTITY Ctr_pmhidelabels	"Wyskakujące okno menu panelu: ukryj etykiety przycisku">
@@ -118,6 +121,9 @@
 <!ENTITY Ctr_tabmokcolor	"Biały kolor przycisków karty (zamknij, nowa, grupy, lista wszystkich)">
 <!ENTITY Ctr_tabmokcolor2	"Biały kolor i ciemny cień tekstu na nieaktywnych kartach">
 <!ENTITY Ctr_tabmokcolor3	"Biały kolor separatorów kart">
+
+<!ENTITY Ctr_navthrobber1	"Kliknięcie wskaźnika aktywności otwiera określony adres:">
+<!ENTITY Ctr_navthrobber2	"Dodaj adres albo pozostaw puste">
 
 <!ENTITY Ctr_tab_tf_info1	"Nazwy kolorów, kod szesnastkowy, wartości rgb(a) i hsl(a) są obsługiwane.">
 <!ENTITY Ctr_tab_tf_info2	"Wejścia nie będą zatwierdzane!">
@@ -140,17 +146,22 @@
 <!ENTITY Ctr_bold			"Pogrubiona">
 <!ENTITY Ctr_italic			"Kursywa">
 
-<!ENTITY Ctr_favicon		"Ustawienia ikony ulubionych">
-<!ENTITY Ctr_emptyfavicon	"Przywróć pustą ikonę ulubionych (jeżeli strona nie zaoferuje żadnej)">
-<!ENTITY Ctr_emptyfavicon2	"Wymień standardową ikonę ulubionych (pusta i wykropkowana) na ikonę kartki">
-<!ENTITY Ctr_noemptypticon	"Usuń pustą ikonę ulubionych z przypiętej karty">
-<!ENTITY Ctr_faviconurl0	"Ikony na pasku adresu">
+<!ENTITY Ctr_urlbar			"Pasek adresu">
+<!ENTITY Ctr_starinurl		"Przycisk 'gwiazdka' na pasku adresu (zrestartuj Firefoksa!)">
+<!ENTITY Ctr_feedinurl		"Przycisk RSS na pasku adresu (zrestartuj Firefoksa!)">
+<!ENTITY Ctr_hideurelstop	"Ukryj przyciski zatrzymania i odświeżania na pasku adresu">
+<!ENTITY Ctr_hideprbutton	"Ukryj przycisk informujący o zablokowanym wyskakującym oknie">
+<!ENTITY Ctr_urlbar_ib		"Pole tożsamości paska adresu">
+<!ENTITY Ctr_verifiedcolors	"Zielone i niebieskie pole tożsamości dla zweryfikowanych stron">
 <!ENTITY Ctr_faviconurl		"Ikona ulubionych na pasku adresu (zrestartuj Firefoksa!)">
 <!ENTITY Ctr_padlock_hid	"Ikona kłódki (ukryta)">
 <!ENTITY Ctr_padlock_def	"Ikona kłódki (domyślna)">
 <!ENTITY Ctr_padlock_cla	"Ikona kłódki (klasyczna)">
 <!ENTITY Ctr_padlock_mod	"Ikona kłódki (nowoczesna)">
 <!ENTITY Ctr_padlock_ext	"Ikony zabezpieczeń">
+<!ENTITY Ctr_icopageinfo	"Kliknięcie ikony otwiera okno 'informacji o stronie'">
+
+<!ENTITY Ctr_extrabarinfo	"Przełączanie pomiędzy trybami 'karty na górze' a 'karty nie na górze' losowo zmienia układ dodatkowych pasków narzędzi. Firefox musi zostać zrestartowany, aby rozwiązać ten problem.">
 
 <!ENTITY Ctr_invicons		"Ikony odwrócone">
 <!ENTITY Ctr_menubar		"Pasek menu">
@@ -162,7 +173,7 @@
 <!ENTITY Ctr_dblclnewtab	"Podwójne kliknięcie otwiera 'nową' kartę (używa browser.newtab.url)">
 <!ENTITY Ctr_hidetbwot		"Ukryj pasek kart z jedną kartą (zrestartuj Firefoksa!)">
 <!ENTITY Ctr_hidetbwote		"Zmniejsz opóźnienie ukrywania przy uruchamianiu">
-<!ENTITY Ctr_notabfog		"Usuń mgłe tła (Windows AeroGlass/8)">
+<!ENTITY Ctr_notabfog		"Usuń mgłę tła (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Usuń kolor tła (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Zredukuj przestrzeń powyżej paska narzędzi (jeżeli możliwe)">
 <!ENTITY Ctr_alttabstb		"Alternatywny kolor tła">
@@ -176,13 +187,15 @@
 <!ENTITY Ctr_nonavbarbg		"Pasek nawigacji: usuń kolor tła">
 <!ENTITY Ctr_nonavborder	"Pasek zakładek: dodaj obramowanie na górze paska">
 <!ENTITY Ctr_nonavtbborder	"Górne paski: usuń obramowanie paska">
+<!ENTITY Ctr_hidesbclose	"Paski boczne: ukryj przycisk zamknięcia paska bocznego">
+<!ENTITY Ctr_chevronfix		"Pasek nawigacji: ukryj podwójną strzałkę ('szewron') na końcu paska">
 
 <!ENTITY Ctr_closeabarbut	"Usuń przycisk zamknięcia paska dodatków">
 <!ENTITY Ctr_highaddonsbar	"Zwiększ wysokość">
 
 <!ENTITY Ctr_animation		"Animacja">
-<!ENTITY Ctr_throbberalt	"Alternatywna animacja ładowania wskaźnika ładowania karty">
-<!ENTITY Ctr_bmanimation	"Animacja dodawnia zakładki">
+<!ENTITY Ctr_throbberalt	"Alternatywna animacja ładowania wskaźnika aktywności karty">
+<!ENTITY Ctr_bmanimation	"Animacja dodawania zakładki">
 <!ENTITY Ctr_pananimation	"Animacja otwierania panelu">
 <!ENTITY Ctr_tabanimation	"Animacja otwierania i zamykania karty (ustawienie about:config)">
 <!ENTITY Ctr_dlanimation	"Animacja 'powiadomienia pobierania' (ustawienie about:config)">
@@ -190,7 +203,11 @@
 <!ENTITY Ctr_toolsitem		"Element w menu narzędzi">
 <!ENTITY Ctr_appmenuitem	"Element w menu przycisków aplikacji">
 <!ENTITY Ctr_contextitem	"Element w menu kontekstowym paska narzędzi">
+<!ENTITY Ctr_puictrbutton	"Przycisk w menu głównego panelu">
+
+<!ENTITY Ctr_otherctroptns	"Inne ustawienia">
 <!ENTITY Ctr_cuibotbuttons	"Dodatkowe przyciski w trybie 'dostosowywania'">
+<!ENTITY Ctr_bookmarkoinpw	"Pozycja 'Otwórz w nowym oknie prywatnym' w menu kontekstowym zakładek">
 
 
 <!ENTITY Ctr_pw_settings	"Ustawienia">
@@ -200,10 +217,13 @@
 <!ENTITY Ctr_pw_set_import	"Importuj ustawienia">
 
 <!ENTITY Ctr_special_font	"Ustawienia koloru tła są tylko dla domyślnego stylu!">
-<!ENTITY Ctr_special_info	"Niektóre opcje mogą nieoferować widocznych zmian we wszystkich przypadkach">
+<!ENTITY Ctr_special_info	"Niektóre opcje mogą nie oferować widocznych zmian we wszystkich przypadkach">
 <!ENTITY Ctr_special_info2	"Ustawienia są stworzone dla domyślnego stylu Firefoksa i mogą nie działać z innymi stylami!">
 <!ENTITY Ctr_support		"Forum wsparcia">
 <!ENTITY Ctr_newversion		"Nowa wersja?">
 
 <!ENTITY Ctr_addon-bar.accesskey	"A">
 <!ENTITY Ctr_extrabar.accesskey		"D">
+<!ENTITY Ctr_openInPrivateWindow	"Otwórz w nowym oknie prywatnym">
+<!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
+<!ENTITY appMenuGettingStarted.label	"Pierwsze kroki">
